[gd_scene load_steps=27 format=3 uid="uid://co1e2lije056e"]

[ext_resource type="Script" path="res://Scenes/Units/Wizards/autorifle.gd" id="1_6sc6y"]
[ext_resource type="Texture2D" uid="uid://tp4dj2k1kox0" path="res://Sprites/Units/Wizards/WizardAutoRifle/WizardAutoRifleShooting.png" id="2_a884v"]
[ext_resource type="Texture2D" uid="uid://hbo0nmbel2a8" path="res://Sprites/Units/Wizards/WizardAutoRifle/WizardAutoRifleDie.png" id="3_clyaf"]
[ext_resource type="Texture2D" uid="uid://cm1rs0528tqg0" path="res://Sprites/Units/Wizards/WizardAutoRifle/WizardAutoRifleWalk.png" id="3_euege"]
[ext_resource type="AudioStream" uid="uid://2s1c473hghy2" path="res://Sound Effects/AutoRifleShot.mp3" id="5_8rq1s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_euege"]
atlas = ExtResource("2_a884v")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_clyaf"]
atlas = ExtResource("2_a884v")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hokf"]
atlas = ExtResource("3_clyaf")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoag6"]
atlas = ExtResource("3_clyaf")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_03jse"]
atlas = ExtResource("3_clyaf")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt5gp"]
atlas = ExtResource("3_clyaf")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhttb"]
atlas = ExtResource("3_clyaf")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_njc4c"]
atlas = ExtResource("3_clyaf")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ncd0"]
atlas = ExtResource("3_clyaf")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1aav"]
atlas = ExtResource("3_clyaf")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiflb"]
atlas = ExtResource("3_clyaf")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_bad5w"]
atlas = ExtResource("3_euege")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbcs0"]
atlas = ExtResource("3_euege")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7844q"]
atlas = ExtResource("3_euege")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_trxm7"]
atlas = ExtResource("3_euege")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei2ii"]
atlas = ExtResource("3_euege")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4xnw"]
atlas = ExtResource("3_euege")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_6sc6y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_euege")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clyaf")
}],
"loop": true,
"name": &"attack",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hokf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoag6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03jse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt5gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhttb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njc4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ncd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1aav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiflb")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bad5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbcs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7844q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trxm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei2ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4xnw")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6yiv"]
size = Vector2(21.1, 2.7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_628q2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47y6h"]

[node name="Auto Rifle" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_6sc6y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
scale = Vector2(0.187, 0.187)
sprite_frames = SubResource("SpriteFrames_6sc6y")
animation = &"attack"
frame_progress = 0.48217

[node name="RangeArea" type="Area2D" parent="."]
position = Vector2(-1, 1)
collision_mask = 2

[node name="Range" type="CollisionShape2D" parent="RangeArea"]
position = Vector2(227, 17)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_d6yiv")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 20)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_628q2")

[node name="HitboxArea" type="Area2D" parent="."]
collision_layer = 4

[node name="HITBOX" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(-5, 20)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_47y6h")

[node name="Gunshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8rq1s")
volume_db = -20.0
pitch_scale = 4.0
parameters/looping = true

[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="area_entered" from="HitboxArea" to="." method="_on_hitbox_area_area_entered"]
[connection signal="area_exited" from="HitboxArea" to="." method="_on_hitbox_area_area_exited"]
